K8s/minikube/kibana/deployement.workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-kibana
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-kibana
  template:
    metadata:
      labels:
        app: app-kibana
    spec:
      containers:
        - name: app-kibana
          image: docker.elastic.co/kibana/kibana:8.14.3
          resources:
            limits:
              memory: "1Gi"
              cpu: "1500m"
            requests:
              cpu: 250m
              memory: 1Gi
          ports:
            - name: app-kibana
              containerPort: 5601
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      volumes:
        - name: kibana-config
          configMap:
            name: kibana-config
