K8s/minikube/kibana/service.network.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-kibana
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: app-kibana
  ports:
    - name: app-kibana
      port: 5601
      targetPort: 5601
      protocol: TCP
